plugins {
    id "architectury-plugin" version "3.4-SNAPSHOT"
    id "dev.architectury.loom" version "1.7-SNAPSHOT" apply false
	id "com.hypherionmc.modutils.modfusioner" version "1.0.+"
    id "com.github.johnrengelman.shadow" version "8.+" apply false
}

architectury {
    minecraft = rootProject.minecraft_version
}

subprojects {
    apply plugin: "dev.architectury.loom"
    apply plugin: "com.github.johnrengelman.shadow"

    dependencies {
        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
        mappings "net.fabricmc:yarn:${rootProject.yarn_mappings}:v2"
    }
}

allprojects {
    apply plugin: "java"
    apply plugin: "architectury-plugin"
    apply plugin: "maven-publish"

    archivesBaseName = rootProject.archives_base_name
    version = "${rootProject.mod_version}+mc${rootProject.minecraft_version}"
    group = rootProject.maven_group

    repositories {
	}

	tasks.withType(JavaCompile).configureEach {
		options.encoding = "UTF-8"
		options.release = 21
	}

	java {
        withSourcesJar()
    }

	fusioner {
		packageGroup = rootProject.maven_group
		mergedJarName = "${rootProject.archives_base_name}"
		outputDirectory = "build/merged"
		jarVersion = rootProject.version

		neoforge {
			projectName = "neoforge"
			inputTaskName = "remapJar"
		}

		fabric {
			projectName = "fabric"
			inputTaskName = "remapJar"
		}
	}
}
